tests/fixtures/LatestTests/DynamicVariableTests/errors/dyn_str_to_int32.fg
/; EXPECT_ERROR: Runtime Error: Cannot cast Dynamic value to Int32.
var _str = "Hello"
println(Int32(_str))